fix(discover): prevent discover filter inputs from wrapping to new line on iOS. fixing #55

--- a/app/client/stylesheets/components/pu-filterbar.sass
+++ b/app/client/stylesheets/components/pu-filterbar.sass
@@ -1,12 +1,13 @@
 .pu-filterbar
+    white-space: nowrap
     > .pu-sub-input
         max-width: 120px
 
     > .pu-sub-label,
     > .pu-sub-input
-        float: left
         margin-left: 10px
         position: relative
+        display: inline-block
 
         &:first-child
             margin-left: 0
